--- a/grid-site/style/main.css
+++ b/grid-site/style/main.css
@@ -2,6 +2,10 @@
    box-sizing: border-box;
 }
 
+html {
+   scroll-behavior: smooth;
+}
+
 body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
@@ -16,16 +20,153 @@ body {
 
 header {
    background-color: blue;
+   color: beige;
+   padding-left:8px;
 }
 
 main {
    background-color: beige;
+   height: 100vh;
+   overflow: scroll;
+   scroll-behavior: smooth;
+}
+
+nav ul {
+   width: 100%;
+   padding: 0;
+   margin: 0;
+}
+
+nav li {
+   list-style: none;
+}
+
+nav li a {
+   display: block;
+   padding: 1rem;
+   text-decoration: none;
+   color: beige;
+}
+
+nav li a:hover {
+   background-color: blue;
+}
+
+.banner {
+   text-align: center;
+}
+
+.banner img {
+   width: 300px;
+   height: auto;
+   border-radius: 10%;
+}
+
+.banner-image {
+   margin-left: auto;
+   margin-right: auto;
+}
+
+code {
+   font-family: 'Courier New', Courier, monospace;
+   background-color: lightgray;
+   border: 1px solid black;
+   display: block;
+   width: 50%;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+pre {
+   white-space: pre-wrap;
+}
+
+.bgcolor-beige {
+   background-color: beige;
+}
+
+section {
+   padding: 1rem;
+}
+
+.hamb {
+   position: absolute;
+   top: 5rem;
+   right: 1rem;
+   cursor: pointer;
+   padding: 10px;
+}
+
+.hamb-line {
+   background: white;
+   display: none;
+   height: 2px;
+   position: relative;
+   width: 30px;
+}
+
+.hamb-line::before,
+.hamb-line::after {
+    background: white;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    transition: all .2s ease-out;
+}
+
+.hamb-line::before {
+   top: 5px;
+}
+.hamb-line::after {
+   top: -5px;
+}
+
+.side-menu {
+   display: none;
+}
+
+.side-menu:checked ~ .hamb .hamb-line {
+   background: transparent;
+}
+
+.side-menu:checked ~ nav.active {
+   display: flex;
+}
+
+.side-menu:checked ~ .hamb .hamb-line::before {
+   transform: rotate(-45deg);
+   top: 0;
+}
+
+.side-menu:checked ~ .hamb .hamb-line::after {
+   transform: rotate(45deg);
+   top: 0;
 }
 
 
 
 @media screen and (max-width: 600px) {
+   header {
+      position: fixed;
+      width: 100%;
+      height: auto;
+   }
+
    .container {
        grid-template-columns: 100%;
    }
+
+   nav li {
+      text-align: center;
+  }
+
+  .hamb-line {
+      display: block;
+  }
+
+  nav.active {
+      display: none;
+  }
 }
